apps/image-generation-pipeline/prefect/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prefect-ingress
  namespace: image-generation-pipeline
spec:
  ingressClassName: nginx
  rules:
    - host: prefect.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
    - host: hprodesk02.100.107.177.3.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prefect-server
                port:
                  number: 4200
